<resources>
    <string name="app_name">EYEBALL MAZE</string>
    <string name="touch_screen">touch screen to continue</string>
    <string name="desc_splash_background">Splash background image</string>
    <string name="loading">LOADING\.\.\. \nplease wait</string>
    <string name="new_game0">New Game(Tom\'s V)</string>
    <string name="new_game1">New Game(prog)</string>
    <string name="new_game2">New Game (manual)</string>
    <string name="new_game3">New Game (proto)</string>
    <string name="new_game4">New Game(LeRoi\'s V)</string>
    <string name="load_game">Load Game</string>
    <string name="tutorial">Tutorial</string>
    <string name="exit">Exit</string>
    <string name="sound">BGM</string>
    <string name="save">Save</string>
    <string name="solution">Solution</string>
    <string name="load">Load</string>
    <string name="move_count">Moves : </string>
    <string name="goal_count">Goals : </string>
    <string name="_moves">%d moves</string>
    <string name="timer">Timer</string>
    <string name="empty_block">Empty block</string>
    <string name="undo">Undo</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="cont">Continue</string>
    <string name="reset">Reset</string>
    <string name="stage_clear">STAGE CLEAR</string>
    <string name="select_lvl">Please choose a level</string>
    <string name="select_next">What\'s next!?</string>
    <string name="fail">Bad luck, click to see more options</string>
    <string name="game_over">GAME OVER</string>
    <string name="complete_message">Congrats!! You have cleared with</string>
    <string name="rules">Rules</string>
    <string name="description"> That circle with the two little eyeballs is you. The eyeballs show which direction you’re facing. What you have to do is make a series of moves that will get you onto the square (or squares) marked GOAL. To indicate your move, click on the square you are moving to. \n \n

You can move horizontally or vertically for any distance, as long as you do not move over any blank spaces. However, you can only end your move on a square that has either the same symbol or the same color as the square your move started on (moving to both the same symbol and the same color is also okay). You can move straight ahead or to your right or left, but you may not move to a square that is behind you. If you move to the right or left, your eyeballs will then be pointing in a new direction.  \n \n

Mazes with two or more goals are tricky. You must visit every goal to solve the maze; so after you visit one goal, you will then want to move on to reach another goal. But when you leave the goal you visited, something unusual happens: the square disappears and is replaced with a blank. This complicates things because you’re not allowed to travel over blank squares. \n \n

The go-back-one-move function takes you back a move, but you can click on it repeatedly to go back several moves. \n \n \n</string>

    <string name="tom_app_name">EyeBallMaze</string>
    <string name="tom_game_start">Start</string>
    <string name="tom_game_restart">Restart Stage</string>
    <string name="tom_go_back_one_movement">Go back once</string>
    <string name="tom_sound_control">Sound</string>
    <string name="tom_board_block">This is a clickable board block</string>
    <string name="tom_empty_block">This is an empty block, cannot move to here</string>
    <string name="tom_game_manual">Manually</string>
    <string name="tom_game_auto">Programmatically</string>
    <string name="tom_sound_on">On</string>
    <string name="tom_sound_off">Off</string>
    <string name="tom_game_save">Save</string>
    <string name="tom_game_load">Load</string>
    <string name="tom_stage_one_choose">Stage 1</string>
    <string name="tom_stage_two_choose">Stage 2</string>
    <string name="tom_number_of_goals">Number of Goal(s) : %1$d</string>
    <string name="tom_number_of_movements">Number of Movements : %1$d</string>
    <string name="tom_movements_left">Movements left : %1$d</string>
    <string name="tom_time_taken">00:00:00</string>
    <string name="tom_tutorial">Tutorial</string>

    <string name="LeRoi_app_name">EyeBall</string>
    <string name="LeRoi_btn_start_text">Start Game</string>
    <string name="LeRoi_btn_load_text">Help</string>
    <string name="LeRoi_sound">Sound</string>
    <string name="LeRoi_sound_off">sound_off</string>
    <string name="LeRoi_sound_on">sound_on</string>
    <string name="LeRoi_restart">Restart</string>
    <string name="LeRoi_undo">Undo</string>
    <string name="LeRoi_load">Load</string>
    <string name="LeRoi_no_of_moves">Number of Moves Left:</string>
    <string name="LeRoi_no_of_goals">Number of goals left:</string>
    <string name="LeRoi_move_counter">Move Counter:</string>
    <string name="LeRoi_place_holder">hahahaha</string>




</resources>
