<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:checked="true"
        android:text="@string/sound"
        android:textColor="#fff"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_new_game0"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:onClick="onNewGameOtherButtonClick"
        android:text="@string/new_game0"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_new_game1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:onClick="onNewGameProgrammaticButtonClick"
        android:text="@string/new_game1"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game0"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game0"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_game0" />

    <Button
        android:id="@+id/btn_new_game2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:onClick="onNewGameManualButtonClick"
        android:text="@string/new_game2"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game1"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_game1" />


    <Button
        android:id="@+id/btn_new_game3"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:onClick="onNewGameManualProtoButtonClick"
        android:text="@string/new_game3"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game2"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game2"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_game2" />

    <Button
        android:id="@+id/btn_new_game4"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:onClick="onNewGameLeRoiButtonClick"
        android:text="@string/new_game4"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game3"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game3"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_game3" />

    <Button
        android:id="@+id/btn_tutorial"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:onClick="onTutorialButtonClick"
        android:text="@string/tutorial"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game4"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game4"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_game4" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#88ffffff"
        android:fontFamily="@font/geodesic"
        android:text="@string/exit"
        android:textColor="#111"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_tutorial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_tutorial"
        app:layout_constraintTop_toBottomOf="@+id/btn_tutorial" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:background="#77ffffff"
        android:fontFamily="@font/chubby_dotty"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#111"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

</android.support.constraint.ConstraintLayout>
