<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".TutorialActivity">

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:checked="true"
        android:text="@string/sound"
        android:textColor="#fff"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tutorialHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#ccffffff"
        android:fontFamily="@font/geodesic"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/tutorial"
        android:textColor="#ff0000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccffffff"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialHeading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <VideoView
                    android:id="@+id/videoTutorial"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_horizontal"/>
            </FrameLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/geodesic"
                android:gravity="center"
                android:text="@string/rules"
                android:textColor="#ff0000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/videoTutorial" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="16sp"
                android:fontFamily="@font/poppins"
                android:text="@string/description"
                android:textColor="#111"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>